[package]
name = "brief-sv"
version = "0.1.0"
edition = "2024"
description = "A minimal CLI tool that hosts a single file in your local network"
license = "MIT"
repository = "https://github.com/mtugb/brief-sv"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
local-ip-address = "0.6.11"
pulldown-cmark = "0.13.3"
qrcode = "0.14.1"
